# augment-agent-memory

./: README.md  agents.md  pyproject.toml
.github/workflows/: release.yml
src/augment_agent_memory/: __init__.py  config.py  install.py  workspace.py
src/augment_agent_memory/hooks/: __init__.py  post_tool_use.py  session_start.py  stop.py
tests/: test_config.py  test_hooks.py  test_install.py  test_workspace.py
